--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@openzeppelin/test-helpers": "^0.5.6",
     "chai": "^4.2.0",
     "ethers": "^5.0.15",
+    "lodash": "^4.17.20",
     "prompt-sync": "^4.2.0",
     "truffle": "^5.1.41",
     "truffle-flattener": "^1.4.4"
