--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
+    "@nomiclabs/hardhat-etherscan": "^2.1.1",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
+    "dotenv": "^8.2.0",
     "ethereum-waffle": "^3.2.1",
     "hardhat": "^2.0.8",
     "hardhat-gas-reporter": "^1.0.4",
-    "solidity-coverage": "^0.7.14",
-    "dotenv": "^8.2.0"
+    "solidity-coverage": "^0.7.14"
   }
 }
